# Kubeharness

./: .gitignore  .trivyignore  MANIFEST.in  README.md  harness guide.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: build.yaml  kagent.yaml  llm.yaml  tools.yaml
context/base/: conventions.md  tech_stack.md
context/docs/: getting_started.md  harness_internals.md  kagent_tools_reference.md  release_notes.md
context/harness/: developer_prompt.md  runtime_verifier_prompt.md
context/human/: harness_internals.md
context/inject/: conventions.md  tech_stack.md
context/knowledge/: _template.md  cilium.md  emqx-llm-findings.md  emqx.md  myapp-llm-findings.md
context/phases/: _template.md  messaging.md  pipeline.md  security.md  storage.md  visibility.md
context/prompts/: developer_prompt.md  runtime_verifier_prompt.md
docs/: design.md  refactor.md
edge-server/tests/: _template.sh
harness/: __main__.py  cli.py  config.py  graph.py  init.py  runtime.py  shell.py  state.py  static.py
harness/llm/: artifacts.py  client.py  context.py  json_utils.py  tool_loop.py
harness/mcp/: kagent_client.py
harness/nodes/: developer.py  runtime_verifier.py  static_verifier.py
harness/templates/: .mcp.json.tmpl  AGENTS.md.tmpl  CLAUDE.md.tmpl
harness/tools/: gitleaks.py  helm.py  kubeconform.py  kubectl.py  local_tools.py  shell.py  trivy.py  yamllint.py
harness/verifiers/: __init__.py  runtime_gates.py  static.py
scripts/: install_tools.sh  run.py
templates/: AGENTS.md.tmpl  CLAUDE.md.tmpl
templates/.claude/: settings.json.tmpl
tests/: conftest.py  test_cli.py  test_config.py  test_developer_node.py  test_init.py  test_kagent_client.py  test_llm_client.py  test_runtime.py  test_runtime_gates.py  test_runtime_verifier_node.py  test_shell.py  test_static.py  test_static_verifier_node.py  test_tools.py
(+29 files in other folders)
