[project]
name = "kubeharness"
version = "2.0.0"
description = "Deterministic Kubernetes deploy/verify CLI + agent wiring templates"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pyyaml",
    "yamllint",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
kubeharness = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
