[project]
name = "kubeharness"
version = "2.0.1"
description = "Deterministic Kubernetes deploy/verify CLI + agent wiring templates"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "yamllint",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
kubeharness = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.setuptools.package-data]
# MANIFEST.in lists template files (incl. hidden dirs like .claude/) so
# that both sdist and wheel builds ship the scaffold tree.
harness = ["templates/**/*"]
